# Learning-Resource-Manager

backend/: .env  main.py  pyproject.toml
backend/api/: admin.py  auth.py
backend/core/: exceptions.py  security.py  validations.py
backend/db/: conn.py  user.py
backend/models/: user.py
backend/sql/: user_queries.sql
frontend/: package-lock.json  package.json
frontend/src/: App.vue
